# spacerocks-rust

./: Cargo.toml
src/: calc_E_from_M.rs  calc_kep_from_xyz.rs  constants.rs  correct_for_ltt.rs  detection.rs  gauss.rs  keplerorbit.rs  lib.rs  main.rs  observatory.rs  spacerock.rs  statevector.rs
