[package]
name = "spacerocks"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Napier"]
description = "Software for solar system calculations."
repository = "https://github.com/kjnapier/spacerocks-rust"
license = "GPL-3.0"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"